[gd_scene load_steps=14 format=3 uid="uid://ba50n6dr6ipau"]

[ext_resource type="Script" uid="uid://b1ld6yf22v3sq" path="res://Scripts/SpawnEnemy.gd" id="1_ahqd5"]
[ext_resource type="PackedScene" uid="uid://bunmeh8jxgkjj" path="res://Scenes/Player/player.tscn" id="1_ebmjs"]
[ext_resource type="PackedScene" uid="uid://c1m10h0sqogy0" path="res://Scenes/Enemies/demon.tscn" id="2_e8oij"]
[ext_resource type="PackedScene" uid="uid://ses2rjxjm7o4" path="res://Scenes/Player/sword.tscn" id="12_xdwyp"]
[ext_resource type="PackedScene" uid="uid://nverh2los05o" path="res://Scenes/Player/PlayerSkills.tscn" id="13_ahqd5"]
[ext_resource type="PackedScene" uid="uid://b82en3adb3mg5" path="res://Scenes/Enemies/morph.tscn" id="15_gqwak"]
[ext_resource type="PackedScene" uid="uid://btwsnu1lwi4qw" path="res://Scenes/Enemies/slime.tscn" id="16_3jpjc"]
[ext_resource type="PackedScene" uid="uid://ng4em2t7bkre" path="res://Scenes/reflection.tscn" id="17_gqwak"]

[sub_resource type="Curve2D" id="Curve2D_7l4mf"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -807, -524, 0, 0, 0, 0, -798, 513, 0, 0, 0, 0, 738, 522, 0, 0, 0, 0, 728, -516, 0, 0, 0, 0, -807, -524)
}
point_count = 5

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ahqd5"]
a = Vector2(-687, -448)
b = Vector2(-680, 470)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_dw2ve"]
a = Vector2(639, -462)
b = Vector2(644, 492)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8u2a7"]
a = Vector2(736, 438)
b = Vector2(-715, 437)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_e8oij"]
a = Vector2(-776, -449)
b = Vector2(674, -451)

[node name="Game" type="Node2D"]
script = ExtResource("1_ahqd5")

[node name="Reflection" parent="." instance=ExtResource("17_gqwak")]
scale = Vector2(0.877621, 1.1275)

[node name="Player" parent="." instance=ExtResource("1_ebmjs")]
unique_name_in_owner = true
light_mask = 3
z_index = 1
position = Vector2(-12, -8)
line_width = 1.0

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.00528596, 0.0628275, 0.0334928, 1)

[node name="SpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_7l4mf")

[node name="SpawnPathFollow" type="PathFollow2D" parent="SpawnPath"]
unique_name_in_owner = true
position = Vector2(-807, -524)
rotation = 1.56212

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Sword" parent="." instance=ExtResource("12_xdwyp")]
position = Vector2(-12, -8)
follow_speed = 85.0

[node name="Abilities" parent="." instance=ExtResource("13_ahqd5")]

[node name="InvisibleWall" type="StaticBody2D" parent="."]
position = Vector2(0, -4)

[node name="Border" type="CollisionShape2D" parent="InvisibleWall"]
visibility_layer = 128
shape = SubResource("SegmentShape2D_ahqd5")
one_way_collision = true

[node name="Border2" type="CollisionShape2D" parent="InvisibleWall"]
visibility_layer = 128
position = Vector2(1319, 16)
rotation = 3.14159
shape = SubResource("SegmentShape2D_dw2ve")
one_way_collision = true

[node name="Border3" type="CollisionShape2D" parent="InvisibleWall"]
visibility_layer = 128
shape = SubResource("SegmentShape2D_8u2a7")
one_way_collision = true

[node name="Border4" type="CollisionShape2D" parent="InvisibleWall"]
visibility_layer = 128
position = Vector2(-67, -899)
rotation = 3.14159
shape = SubResource("SegmentShape2D_e8oij")
one_way_collision = true

[node name="SpawnEnemyTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Morph" parent="." instance=ExtResource("15_gqwak")]
position = Vector2(-38, -166)

[node name="Slime" parent="." instance=ExtResource("16_3jpjc")]
position = Vector2(-248, -44)

[node name="Demon" parent="." instance=ExtResource("2_e8oij")]
position = Vector2(261, -59)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnEnemyTimer" to="." method="_on_spawn_enemy_timer_timeout"]
